--- a/widgets-web/nps/package.json
+++ b/widgets-web/nps/package.json
@@ -19,8 +19,8 @@
     "start": "pluggable-widgets-tools start:server",
     "dev": "pluggable-widgets-tools start:web",
     "build": "pluggable-widgets-tools build:web",
-    "lint": "pluggable-widgets-tools lint",
-    "lint:fix": "pluggable-widgets-tools lint:fix",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "prerelease": "npm run lint",
     "release": "pluggable-widgets-tools release:web"
   },
