--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "start": "turbo run start",
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "create:web": "node ./scripts/create-widget.js web",
+    "create:native": "node ./scripts/create-widget.js native"
   },
   "devDependencies": {
+    "@mendix/generator-widget": "^9.20.0",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint": "^8.33.0",
     "eslint-config-standard": "^17.0.0",
@@ -22,7 +25,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "turbo": "^1.7.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "yeoman-environment": "^3.13.0"
   },
   "engines": {
     "node": ">=14.0.0"
